<resources>
    <string name="app_name">EventBeforeAfterCounter</string>

    <string name="result">判定結果</string>
    <string name="copyright">著作権情報</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--終了確認用トースト-->
    <string name="toast_back_pressed">もう一度押すと終了します。</string>

    <!--MainActivity-->
    <string name="main_high_school_name">高校名</string>
    <string name="event_character1">1人目</string>
    <string name="event_character2">2人目</string>
    <string name="event_character3">3人目</string>
    <string name="event_character4">4人目</string>
    <string name="event_character5">5人目</string>
    <string name="event_character6">6人目</string>
    <string name="button_open_wiki">Wikiを開く</string>
    <string name="button_judge">判定する</string>

    <!--ResultActivity-->
    <string name="high_school_header">%s空きイベント数</string>
    <string name="high_school_events">前%1$d/後%2$d</string>
    <string name="decks_header">このデッキのイベント数は</string>
    <string name="slash">/</string>
    <string name="before_events">前%d</string>
    <string name="after_events">後%d</string>
    <string name="multi_events">+(複)×%d</string>
    <string name="events_per_week_header">空き一週あたりの発生イベント数は</string>
    <string name="events_per_week_events">前%1$d/後%2$d</string>
    <string name="result_header"></string>
    <string name="result_events"></string>

    <!--ドロワー-->
    <string name="drawer_item_result">前回の結果</string>
    <string name="drawer_item_copyright">著作権情報</string>

    <string name="result_tmp">選択されているのは%1$sです。前イベント数%2$d、後イベント数%3$d</string>

    <!--todo-->
    <!--http://androidstudio.hatenablog.com/entry/2014/07/21/170610-->
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="copyright_header">本アプリケーションは、以下のソフトウェアを含んでいます。</string>
    <string name="copyright_gson">Google Gson\n\n
        Copyright 2008 Google Inc.\n\n
Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n\n
    http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software\n
distributed under the License is distributed on an "AS IS" BASIS,\n
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and\n
limitations under the License.\n</string>
    <string name="copyright_okhttp">OkHttp\n\n
        Copyright 2016 Square, Inc.\n\n
Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n\n
   http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software\n
distributed under the License is distributed on an "AS IS" BASIS,\n
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and\n
limitations under the License.</string>

</resources>
